test/integration/bad/typo.stan
transformed data {
   vector[3] x = to_vetor({1,2,3});
}